fixed archive link z-index issue and made astronaut lower on screen

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -262,6 +262,7 @@
 .faq {
   height: 2800px;
   padding-top: 400px;
+  z-index: 0;
   @media (min-width: $xxs) {
     padding-top: 200px;
     height: 2500px;
