--- a/src/styles/svgs.scss
+++ b/src/styles/svgs.scss
@@ -162,11 +162,7 @@
   @media (min-width: $xl) {
     display: block;
     width: 18em;
-    top: 1100px;
-    right: -40px;
-  }
-  @media (min-width: $xxl) {
-    top: 1100px;
+    top: 1300px;
     right: -40px;
   }
 }
@@ -207,10 +203,10 @@
   @media (min-width: $xl) {
     width: 10em;
     right: 450px;
-    top: 1100px;
+    top: 1200px;
   }
   @media (min-width: $xxl) {
-    top: 1100px;
+    top: 1200px;
     right: 300px;
   }
 }
